--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "spectacle-present",
   "version": "1.0.1",
   "description": "Spectacle presentation server with a single command.",
-  "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist",
     "lint": "eslint --ext .js,.jsx .",
@@ -21,12 +20,7 @@
     "react-dom": "^0.14.3",
     "spectacle": "^1.0.0",
     "spectacle-code-slide": "^0.1.9",
-    "warning": "^2.1.0"
-  },
-  "bin": {
-    "spectacle-present": "./bin/server.js"
-  },
-  "devDependencies": {
+    "warning": "^2.1.0",
     "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
@@ -55,5 +49,8 @@
     "webpack": "^1.12.8",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.5.0"
+  },
+  "bin": {
+    "spectacle-present": "./bin/server.js"
   }
 }
