--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "spectacle-present",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Spectacle presentation server with a single command.",
   "scripts": {
     "lint": "eslint --ext .js,.jsx .",
     "clean": "rimraf dist",
     "start": "node ./bin/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bertoort/spectacle-present"
   },
   "author": "bertoort",
   "license": "MIT",
